--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.0.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@react-oauth/google": "^0.11.0",
