add dev dependincies

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "dev": "npm server.js",
+    "dev": "nodemon server.js",
     "build": "npm i"
   },
   "keywords": [],
@@ -23,15 +23,5 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1"
-  },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Pkanand1999/Kraken.AI.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Pkanand1999/Kraken.AI/issues"
-  },
-  "homepage": "https://github.com/Pkanand1999/Kraken.AI#readme",
-  "description": ""
+  }
 }
