add npm install in script package.json

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "build": "npm"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
