change file name server.js to index.js

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "kraken",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "build": "npm install"
+    "dev": "nodemon index.js",
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
