add backend deployed api

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH_URL=http://localhost:8080/api/v1/auth
-REACT_APP_AI_URL=http://localhost:8080/api/v1/openai
+REACT_APP_AUTH_URL=https://open-kraken.onrender.com/api/v1/auth
+REACT_APP_AI_URL=https://open-kraken.onrender.com/api/v1/openai
 REACT_APP_CLIENT_ID=577316870252-rj741d84b5410lalp73fun6l5fg1bhci.apps.googleusercontent.com
