--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,8 +7,8 @@
     "build": "npm i"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Pankaj Kumar Anand",
+  "license": "MIT",
   "dependencies": {
     "@faker-js/faker": "^8.0.1",
     "bcrypt": "^5.1.0",
